<resources>
    <string name="app_name">CheckORG</string>
    <string name="check_by_label">Check by Label</string>
    <string name="check_by_barcode">Check by barcode</string>
    <string name="check_by_random_image">Check by random image</string>
    <string name="result">Result</string>
    <string name="click_button_to_add_image">Click + button to add image</string>
    <string name="image_preview">Image preview</string>
    <string name="check_by_label_image">Check by label image</string>
    <string name="barcode_scan">Barcode scan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">About</string>
    <string name="checkorg">CheckORG</string>
    <string name="make_product_varify_with_3_steps">Make product varify with 3 steps</string>
</resources>
