<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <!--top line-->

            <LinearLayout
                android:layout_width="@dimen/spacing_xlarge"
                android:layout_height="@dimen/spacing_mlarge"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_10" />

            </LinearLayout>

            <!--section label-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_title"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10"
                        android:minHeight="?attr/actionBarSize" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/spacing_small"
                        android:paddingRight="@dimen/spacing_small"
                        android:onClick="clickLabel"
                        android:text="@string/check_by_label_image"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90" />

                    <LinearLayout
                        android:id="@+id/lyt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:text="@string/check_by_label"
                            android:textAllCaps="false" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:text="" />

                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>

            <!--section barcode-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_description"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_description"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:gravity="center_vertical"
                        android:onClick="clickLabel"
                        android:paddingLeft="@dimen/spacing_small"
                        android:paddingRight="@dimen/spacing_small"
                        android:text="@string/barcode_scan"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90" />

                    <LinearLayout
                        android:id="@+id/lyt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:text="@string/check_by_barcode"
                            android:textAllCaps="false" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:text="" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

            <!--section advance-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/step_time"
                        android:layout_width="@dimen/spacing_xlarge"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="@drawable/shape_round_solid"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label_time"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:gravity="center_vertical"
                        android:onClick="clickLabel"
                        android:paddingLeft="@dimen/spacing_small"
                        android:paddingRight="@dimen/spacing_small"
                        android:text="@string/check_by_random_image"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90" />

                    <LinearLayout
                        android:id="@+id/lyt_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:text="@string/check_by_random_image"
                            android:textAllCaps="false"/>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:text="" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>












</androidx.constraintlayout.widget.ConstraintLayout>
</layout>